--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,10 +1,9 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-color: #222;
+  color: #fff;
   margin: 33px; }
 
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px; }
 
@@ -14,10 +13,7 @@ pre {
   font-size: 11px; }
 
 a {
-  color: #000; }
-
-a:visited {
-  color: #666; }
+  color: #aaa; }
 
 a:hover {
   color: #fff;
@@ -34,7 +30,7 @@ div.actions {
   margin-bottom: 10px; }
 
 #notice {
-  color: green; }
+  font-weight: bold; }
 
 .field_with_errors {
   padding: 2px;
