--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,3 @@
 <% if flash[:notice] %>
-  <strong>Info : <%= flash[:notice] %></strong>
+  <strong id="notice">Info : <%= flash[:notice] %></strong>
 <% end %>
