--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -4,18 +4,18 @@ body {
   margin: 33px; }
 
 body, p, ol, ul, td {
-  font-size: 13px;
-  line-height: 18px; }
+  line-height: 1.1; }
 
 pre {
   background-color: #eee;
-  padding: 10px;
-  font-size: 11px; }
+  padding: 10px; }
 
-a {
+a,
+input.button--link {
   color: #aaa; }
 
-a:hover {
+a:hover,
+input.button--link:hover {
   color: #fff;
   background-color: #000; }
 
@@ -48,13 +48,11 @@ div.actions {
   text-align: left;
   font-weight: bold;
   padding: 5px 5px 5px 15px;
-  font-size: 12px;
   margin: -7px -7px 0;
   background-color: #c00;
   color: #fff; }
 
 #error_explanation ul li {
-  font-size: 12px;
   list-style: square; }
 
 label {
