--- a/app/views/session/login.html.erb
+++ b/app/views/session/login.html.erb
@@ -14,4 +14,5 @@
   </div>
 <% end %>
 
-<div>Si vous n'avez pas de compte, vous pouvez <%= link_to "en créer un", register_path %>.</div>
+<p>Si vous n'avez pas de compte, vous pouvez <%= link_to "en créer un", register_path %>.</p>
+<p>Si vous avez oublié votre mot de passe, vous pouvez <%= link_to "le réinitialiser", account_recovery_path %>.</p>
